syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/marioscordia/chat/pkg/chat_v1;chat_v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
    rpc DeleteMember(DeleteMemberRequest) returns (google.protobuf.Empty);
    rpc SendMessage(Message) returns (google.protobuf.Empty);
}

message CreateRequest {
    string chat_name = 1;
    int64 creator_id = 2;
    repeated int64 user_ids = 3;
    string chat_type = 4;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteChatRequest {
    int64 id = 1;
}

message DeleteMemberRequest {
    int64 chat_id = 1;
    int64 member_id = 2;
}

message Message {
    int64 author_id = 1;
    int64 chat_id = 2;
    string text = 3;
}